--- a/index.html
+++ b/index.html
@@ -1,193 +1,12 @@
-import React, { useState } from 'react';
-import { Card, CardHeader, CardContent } from '@/components/ui/card';
-import { Tabs, TabsContent, TabsList, TabsTrigger } from '@/components/ui/tabs';
-import { Button } from '@/components/ui/button';
-
-const CurriculumInsights = () => {
-  const [selectedLesson, setSelectedLesson] = useState(null);
-
-  const lessons = [
-    {
-      id: 1,
-      title: "지속가능한 학교 프로젝트",
-      process: "1. 팀 구성 2. 학교 환경 분석 3. 개선 아이디어 도출 4. 실행 계획 수립 5. 프로젝트 실행 6. 결과 평가 및 공유",
-      coreCompetency: "자기주도성, 창의적 사고력, 협업 능력",
-      socialEmotional: "책임감, 공동체 의식, 문제해결 능력",
-      highTouch: "팀워크 활동, 현장 조사, 아이디어 회의",
-      highTech: "환경 데이터 수집 앱, 협업 툴, 프레젠테이션 소프트웨어",
-      insight: "학생들이 실제 문제를 해결하며 지속가능성에 대한 이해를 깊이 있게 할 수 있습니다."
-    },
- {
-      id: 2,
-      title: "다문화 요리 축제",
-      process: "1. 문화 연구 2. 레시피 선정 3. 재료 준비 4. 요리 실습 5. 축제 기획 6. 축제 진행",
-      coreCompetency: "문화적 소양, 의사소통 능력, 공동체 역량",
-      socialEmotional: "문화적 공감, 사회적 인식, 관계 형성 능력",
-      highTouch: "요리 실습, 문화 교류, 축제 참여",
-      highTech: "온라인 레시피 데이터베이스, 영상 제작 도구, 가상 문화 체험",
-      insight: "음식을 매개로 다양한 문화에 대한 이해와 존중을 자연스럽게 습득할 수 있습니다."
-    },
-    {
-      id: 3,
-      title: "디지털 시민성 캠페인",
-      process: "1. 디지털 윤리 학습 2. 문제점 분석 3. 캠페인 기획 4. 콘텐츠 제작 5. 온라인 캠페인 실행 6. 효과 측정",
-      coreCompetency: "디지털 리터러시, 의사소통 능력, 시민 역량",
-      socialEmotional: "책임 있는 의사결정, 사회적 인식, 자기관리",
-      highTouch: "그룹 토론, 역할극, 피어 리뷰",
-      highTech: "소셜 미디어 플랫폼, 디지털 콘텐츠 제작 도구, 데이터 분석 툴",
-      insight: "디지털 세계에서의 책임과 윤리의 중요성을 체험하며 배울 수 있습니다."
-    },
-    {
-      id: 4,
-      title: "지역사회 문제 해결 프로젝트",
-      process: "1. 지역 조사 2. 문제 정의 3. 해결책 브레인스토밍 4. 실행 계획 수립 5. 지역사회 협력 6. 프로젝트 실행 및 평가",
-      coreCompetency: "문제해결력, 창의적 사고력, 공동체 역량",
-      socialEmotional: "사회적 책임감, 공감 능력, 리더십",
-      highTouch: "현장 인터뷰, 지역 주민 협력, 봉사 활동",
-      highTech: "GIS 매핑 도구, 크라우드펀딩 플랫폼, 프로젝트 관리 소프트웨어",
-      insight: "실제 지역사회 문제 해결에 참여함으로써 시민으로서의 책임과 역할을 체득할 수 있습니다."
-    },
-    {
-      id: 5,
-      title: "과학 기술 윤리 토론",
-      process: "1. 과학기술 이슈 학습 2. 윤리적 쟁점 분석 3. 입장 정리 4. 토론 준비 5. 토론 진행 6. 성찰 및 의견 정리",
-      coreCompetency: "비판적 사고력, 의사소통 능력, 윤리적 판단력",
-      socialEmotional: "책임 있는 의사결정, 사회적 인식, 가치관 형성",
-      highTouch: "소그룹 토론, 역할 바꾸기 토론, 전문가 초청 강연",
-      highTech: "온라인 토론 플랫폼, AI 윤리 시뮬레이션, 가상현실(VR) 체험",
-      insight: "과학기술의 발전이 가져올 윤리적 문제에 대해 깊이 있게 고민하고 토론하는 능력을 기를 수 있습니다."
-    },
-    {
-      id: 6,
-      title: "창업 아이디어 경진대회",
-      process: "1. 창업 기초 학습 2. 사회문제 탐구 3. 아이디어 개발 4. 비즈니스 모델 수립 5. 발표 자료 준비 6. 피칭 및 평가",
-      coreCompetency: "창의적 사고력, 기업가 정신, 의사소통 능력",
-      socialEmotional: "자기효능감, 목표 설정 능력, 스트레스 관리",
-      highTouch: "멘토링, 팀 빌딩 활동, 피드백 세션",
-      highTech: "비즈니스 모델 캔버스 툴, 프로토타이핑 소프트웨어, 피칭 시뮬레이션 앱",
-      insight: "사회문제 해결과 창업을 연계함으로써 혁신적 사고와 기업가 정신을 함양할 수 있습니다."
-    },
-    {
-      id: 7,
-      title: "환경 다큐멘터리 제작",
-      process: "1. 환경 이슈 조사 2. 스토리보드 작성 3. 촬영 및 인터뷰 4. 영상 편집 5. 시사회 개최 6. 환경 캠페인 연계",
-      coreCompetency: "미디어 리터러시, 창의적 표현력, 환경 소양",
-      socialEmotional: "환경 감수성, 사회적 책임감, 협력적 문제해결",
-      highTouch: "현장 답사, 전문가 인터뷰, 팀 프로젝트",
-      highTech: "디지털 카메라, 영상 편집 소프트웨어, 온라인 스트리밍 플랫폼",
-      insight: "환경 문제를 직접 조사하고 표현하는 과정을 통해 환경 보호의 중요성을 깊이 있게 이해할 수 있습니다."
-    },
-    {
-      id: 8,
-      title: "글로벌 펜팔 프로젝트",
-      process: "1. 파트너 학교 선정 2. 자기소개 작성 3. 문화 교류 주제 선정 4. 편지/이메일 교환 5. 화상 통화 6. 문화 프레젠테이션",
-      coreCompetency: "글로벌 역량, 의사소통 능력, 문화적 감수성",
-      socialEmotional: "공감 능력, 다양성 존중, 관계 형성 기술",
-      highTouch: "편지 쓰기, 문화 물품 교환, 온라인 미팅",
-      highTech: "언어 번역 앱, 화상 회의 툴, 디지털 문화 교류 플랫폼",
-      insight: "직접적인 국제 교류를 통해 글로벌 시민으로서의 자질을 기르고 문화적 다양성을 체험할 수 있습니다."
-    },
-    {
-      id: 9,
-      title: "학교 예술제",
-      process: "1. 예술 분야 선택 2. 작품 구상 3. 제작 과정 4. 전시/공연 준비 5. 예술제 개최 6. 감상 및 평가",
-      coreCompetency: "창의적 표현력, 심미적 감성 역량, 자기관리 역량",
-      socialEmotional: "자기 표현력, 정서 인식, 성취감",
-      highTouch: "예술 작품 제작, 공연, 갤러리 워크",
-      highTech: "디지털 아트 툴, 음악 제작 소프트웨어, 가상 갤러리 플랫폼",
-      insight: "다양한 예술 활동을 통해 자신을 표현하고 타인의 작품을 감상하며 창의성과 감성을 발달시킬 수 있습니다."
-    },
-    {
-      id: 10,
-      title: "미래 직업 탐구 프로젝트",
-      process: "1. 미래 사회 예측 2. 새로운 직업 탐색 3. 직업 프로필 작성 4. 필요 역량 분석 5. 진로 계획 수립 6. 발표 및 피드백",
-      coreCompetency: "진로 개발 역량, 정보처리 역량, 창의적 사고력",
-      socialEmotional: "자기이해, 목표설정 능력, 적응력",
-      highTouch: "직업인 인터뷰, 롤플레잉, 진로 상담",
-      highTech: "AI 기반 진로 추천 시스템, VR 직업 체험, 온라인 포트폴리오 제작 툴",
-      insight: "미래 사회의 변화를 예측하고 새로운 직업을 탐구함으로써 진로에 대한 폭넓은 시각과 준비 능력을 기를 수 있습니다."
-    },
-    {
-      id: 11,
-      title: "학생 자치 프로젝트",
-      process: "1. 학교 문제 파악 2. 해결책 제안 3. 의사결정 과정 참여 4. 실행 계획 수립 5. 프로젝트 실행 6. 효과 평가",
-      coreCompetency: "민주시민 역량, 리더십, 의사결정 능력",
-      socialEmotional: "책임감, 공동체 의식, 갈등 해결 능력",
-      highTouch: "학생회 활동, 토론회, 캠페인 진행",
-      highTech: "온라인 투표 시스템, 학교 커뮤니티 앱, 프로젝트 관리 도구",
-      insight: "학교 운영에 직접 참여함으로써 민주주의 가치를 체험하고 리더십과 책임감을 기를 수 있습니다."
-    },
-    {
-      id: 12,
-      title: "AI 윤리 워크숍",
-      process: "1. AI 기초 학습 2. 윤리적 딜레마 사례 연구 3. AI 윤리 가이드라인 개발 4. AI 프로젝트 기획 5. 윤리적 검토 6. 발표 및 토론",
-      coreCompetency: "과학기술 이해력, 윤리적 사고력, 비판적 사고력",
-      socialEmotional: "도덕성, 사회적 책임감, 미래 지향적 사고",
-      highTouch: "그룹 토론, 윤리적 딜레마 시나리오 분석, 전문가 강연",
-      highTech: "AI 윤리 시뮬레이션 툴, 머신러닝 체험 플랫폼, 온라인 토론 포럼",
-      insight: "AI 기술의 윤리적 영향을 탐구하며 미래 사회에서 요구되는 윤리적 판단력과 책임감을 함양할 수 있습니다."
-    }
-  ];
-
-  return (
-    <div className="bg-gray-50 p-6 rounded-lg">
-      <h1 className="text-3xl font-bold mb-6 text-center">2022 개정 교육과정 수업 사례 및 인사이트</h1>
-      
-      <div className="grid grid-cols-3 gap-4 mb-6">
-        {lessons.map((lesson) => (
-          <Button 
-            key={lesson.id} 
-            onClick={() => setSelectedLesson(lesson)}
-            className="p-4 text-left"
-          >
-            {lesson.title}
-          </Button>
-        ))}
-      </div>
-
-      {selectedLesson && (
-        <Card>
-          <CardHeader>
-            <h2 className="text-2xl font-semibold">{selectedLesson.title}</h2>
-          </CardHeader>
-          <CardContent>
-            <Tabs defaultValue="process">
-              <TabsList>
-                <TabsTrigger value="process">수업 과정</TabsTrigger>
-                <TabsTrigger value="competencies">역량</TabsTrigger>
-                <TabsTrigger value="approaches">접근 방식</TabsTrigger>
-                <TabsTrigger value="insight">인사이트</TabsTrigger>
-              </TabsList>
-              <TabsContent value="process">
-                <h3 className="font-semibold mb-2">수업 과정:</h3>
-                <p>{selectedLesson.process}</p>
-              </TabsContent>
-              <TabsContent value="competencies">
-                <h3 className="font-semibold mb-2">핵심역량:</h3>
-                <p>{selectedLesson.coreCompetency}</p>
-                <h3 className="font-semibold mt-4 mb-2">사회정서지원 역량:</h3>
-                <p>{selectedLesson.socialEmotional}</p>
-              </TabsContent>
-              <TabsContent value="approaches">
-                <h3 className="font-semibold mb-2">하이터치:</h3>
-                <p>{selectedLesson.highTouch}</p>
-                <h3 className="font-semibold mt-4 mb-2">하이테크:</h3>
-                <p>{selectedLesson.highTech}</p>
-              </TabsContent>
-              <TabsContent value="insight">
-                <h3 className="font-semibold mb-2">수업 인사이트:</h3>
-                <p>{selectedLesson.insight}</p>
-              </TabsContent>
-            </Tabs>
-          </CardContent>
-        </Card>
-      )}
-
-      {!selectedLesson && (
-        <p className="text-center text-gray-500">수업 사례를 선택하여 상세 내용을 확인하세요.</p>
-      )}
-    </div>
-  );
-};
-
-export default CurriculumInsights;
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>2022 개정 교육과정 인사이트</title>
+  </head>
+  <body>
+    <noscript>자바스크립트를 활성화해주세요.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
